media/css/mozorg/home/home-2018.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/components/billboard';
@import '../../../protocol/css/components/call-out';
@import '../../../protocol/css/components/modal';
@import '../../../protocol/css/components/newsletter-form';
@import '../../../protocol/css/templates/card-layout';

.main-page-heading {
    @include visually-hidden;
}

.mozilla-content {
    margin-top: $spacing-lg;
}


//* -------------------------------------------------------------------------- */
// Primary CTA (page top)

.c-primary-cta {
    background-color: $color-white;
    min-height: 359px;
    position: relative;
    text-align: center;
    z-index: 2; // so it hides the sticky CTA
}

.c-primary-cta-wrapper {
    position: relative;
    padding-top: $layout-sm;

    p {
        margin-bottom: 0;
    }
}

.c-primary-cta-logo {
    margin: 0 auto $spacing-lg auto;
}

.c-primary-cta-title {
    @include text-title-lg;
    margin-bottom: 0;
}

h3,
h4 {
    &.c-primary-cta-title-sub {
        @include font-base;
        @include text-title-sm;
        max-width: 430px;
        margin: 0 auto;
    }
}

.c-primary-cta-desc {
    @include text-body-lg;
}

.c-primary-cta-button {
    margin-top: $layout-sm;
}

.mzp-c-button-download-container {
    margin-bottom: 0;
}

@media #{$mq-md} {
    .c-primary-cta-wrapper {
        padding-bottom: $layout-sm;
    }

    .c-primary-cta-logo {
        margin-bottom: $spacing-xl;
    }
}

@media #{$mq-lg} {
    .c-primary-cta {
        @include bidi(((text-align, left, right),));
        border-top: 100px solid $color-white; // to hide sticky CTA
        margin-bottom: -100px;
        position: relative;
        top: -100px;

        .c-primary-cta-wrapper {
            @include border-box;
            max-width: 50%;
        }

        .c-primary-cta-title-sub {
            margin: 0;
        }
    }

    .download-firefox-primary-cta {
        background-image: url('/media/img/home/2018/browser.png'), url('/media/img/home/2018/bg-primary.svg');
        background-size: 400px 278px, auto;
        background-position: calc(50vw + 34px) 60px, calc(50vw - 41px) -78px;
        background-repeat: no-repeat;

        @media #{$mq-high-res} {
            background-image: url('/media/img/home/2018/browser-high-res.png'), url('/media/img/home/2018/bg-primary.svg');
        }
    }

    .fxaccount-primary-cta {
        @include at2x('/media/img/home/2018/home.jpg', 815px, 362px);
        background-position: 50vw 0;
        background-repeat: no-repeat;
    }

    .mzp-c-navigation + #outer-wrapper .c-primary-cta {
        border-top: 94px solid $color-white;
        top: -94px;
        margin-bottom: -94px;
    }
}

//* -------------------------------------------------------------------------- */
// Conditional content

// Hide Firefox Account CTAs by default; show download unless we know otherwise.
.fxaccount-primary-cta,
.fxaccount-secondary-cta {
    display: none;
}

// Hide download CTAs for people already using Firefox; promote Firefox Accounts instead.
.is-firefox {
    .download-firefox-primary-cta,
    .download-firefox-secondary-cta {
        display: none;
    }

    .fxaccount-primary-cta,
    .fxaccount-secondary-cta {
        display: block;
    }
}


/* -------------------------------------------------------------------------- */
// Custom card styles for lazy-loaded images.

.mzp-c-card {
    .lazy-image-container .mzp-c-card-image {
        opacity: 1;
        transition: opacity 0.3s;
    }

    .lazy-image-container .mzp-c-card-image[data-src] {
        opacity: 0;
    }
}


/* -------------------------------------------------------------------------- */
// Pocket highlights section.

.pocket {
    background: #f5f5f5;
    margin: 20px 0;

    .section-heading {
        @include text-title-xs;
        margin-bottom: $spacing-sm;
    }

    .tagline {
        color: #676767;

        a:link,
        a:visited {
            color: inherit;
        }

        a:hover,
        a:active,
        a:focus {
            color: #000;
        }
    }

    @media #{$mq-md} {
        margin: $spacing-xl 0 0;
        padding-top: $spacing-lg;
    }
}


//* -------------------------------------------------------------------------- */
// Secondary Download CTA (page bottom)

.c-secondary-cta {
    background-color: $color-ink-80;
    color: #fff;
    overflow: hidden;
    position: relative;
    text-align: center;
    z-index: 2;

    p {
        margin-bottom: 0;
    }
}

.c-secondary-cta-title {
    @include at2x('#{$image-path}/logos/firefox/browser/logo-sm.png', 40px, 40px);
    @include text-title-md;
    background-position: center 35px;
    background-repeat: no-repeat;
    margin-bottom: $spacing-sm;
    padding-top: 90px;
}

.c-secondary-cta-button {
    margin-bottom: $spacing-lg;
    margin-top: $spacing-xl;
}

@media #{$mq-lg} {
    .c-secondary-cta {
        @include bidi(((text-align, left, right),));
        background-image: url('/media/img/home/2018/shield.svg'), url('/media/img/home/2018/bg-secondary.svg');
        background-position: calc(50vw + 100px) 120px, 50vw 0;
        background-repeat: no-repeat;
        padding: $layout-xs 0 $layout-sm 0;
    }

    .c-secondary-cta-content {
        max-width: 48%;
    }
    .c-secondary-cta-title {
        background-position: left 35px;
    }
}

@media #{$mq-xl} {
    .c-secondary-cta {
        background-position: calc(50vw + 30px) 120px, 45vw 0;
    }
}



//* -------------------------------------------------------------------------- */
// Secondary FxA CTA (page bottom)


.fxaccount-secondary-cta.mzp-t-dark {
    background-color: $color-ink-80;
}

.fxaccount-secondary-cta.mzp-t-product-firefox {
    .mzp-c-call-out-content {
        @include at2x('#{$image-path}/logos/firefox/logo-md.png', 64px, 64px);
    }
    .mzp-c-call-out-title {
        margin-bottom: $spacing-md;
    }
}

//* -------------------------------------------------------------------------- */
// YouTube iframe responsive in modal.

.ytcontainer-video {
    max-width: 100%;

    .video-container {
        height: 0;
        margin-bottom: $spacing-lg;
        overflow: hidden;
        padding-bottom: 56.25%;
        position: relative;
        width: 100%;
    }

    iframe {
        height: 100%;
        left: 0;
        position: absolute;
        top:0;
        width: 100%;
    }
}

